feat(v3.4.1): Enhance auto selfie with persistence and multi-schedule support

--- a/升级指南.md
+++ b/升级指南.md
@@ -1,4 +1,4 @@
-# Custom Pic Plugin - 升级指南
+# 自定义智能多模型图片生成插件（custom_pic_plugin） - 升级指南
 
 > **修改版定位**：本修改版专注于**定时发送自拍**功能，让Bot更像真人；同时主要对**魔搭模型**进行优化，内置7个精选魔搭模型预设配置，提供开箱即用的体验。
 
