--- a/升级指南.md
+++ b/升级指南.md
@@ -2,7 +2,7 @@
 
 > **修改版定位**：本修改版专注于**定时发送自拍**功能，让Bot更像真人；同时主要对**魔搭模型**进行优化，内置7个精选魔搭模型预设配置，提供开箱即用的体验。
 
-本指南适用于已安装原版插件的用户，通过替换文件的方式升级到修改版 v3.4.0。
+本指南适用于已安装原版插件的用户，通过替换文件的方式升级到修改版 v3.4.1。
 
 ---
 
@@ -17,15 +17,16 @@
 #### 核心文件
 | 文件路径 | 说明 |
 |---------|------|
-| `plugin.py` | 主插件文件，版本号更新至3.4.0，新增依赖包配置 |
-| `core/pic_action.py` | 新增智能参考搜索功能、自拍双负面提示词处理、定时自拍功能 |
-| `core/pic_command.py` | 新增 `/dr auto_selfie` 命令 |
+| `plugin.py` | 主插件文件，版本号更新至3.4.1，新增依赖包配置 |
+| `core/pic_action.py` | 新增智能参考搜索功能、自拍双负面提示词处理、定时自拍功能（含多时间点及黑白名单支持） |
+| `core/pic_command.py` | 新增 `/dr auto_selfie` 命令，支持黑白名单管理 |
 | `core/runtime_state.py` | 新增定时自拍相关状态管理 |
+| `core/config_manager.py` | 增强配置管理，支持配置文件读写 |
 
 #### 配置文件
 | 文件路径 | 说明 |
 |---------|------|
-| `_manifest.json` | 版本号更新至3.4.0 |
+| `_manifest.json` | 版本号更新至3.4.1 |
 
 ### 需要新增的文件
 
@@ -129,6 +130,10 @@ use_replyer_for_ask = true
 sleep_mode_enabled = true
 sleep_start_time = "23:00"
 sleep_end_time = "07:00"
+schedule_mode = "interval"  # 新增：interval=倒计时模式，times=指定时间点模式
+schedule_times = ["08:00", "20:00"]  # 新增：指定时间点列表
+list_mode = "whitelist"  # 新增：whitelist=白名单，blacklist=黑名单
+chat_id_list = []  # 新增：聊天ID列表
 ```
 
 ### 智能参考搜索配置
@@ -140,9 +145,12 @@ vision_base_url = "https://api.openai.com/v1"
 vision_model = "gpt-4o"
 ```
 
-### 自拍双负面提示词配置
+### 自拍场景配置（v3.4.1 新增）
 ```toml
 [selfie]
+scene_standard = "in a cozy living room, warm lighting"
+scene_mirror = "in front of a bathroom mirror"
+prompt_prefix = "1girl, cute, smile"
 negative_prompt_standard = ""
 negative_prompt_mirror = ""
 ```
