fix: change auto selfie whitelist log level to debug

--- a/新功能添加说明.md
+++ b/新功能添加说明.md
@@ -375,6 +375,6 @@ custom_pic_plugin-main/
 ## 作者信息
 
 - 原版作者：Ptrel，Rabbit-Jia-Er，saberlights Kiuon
-- 修改版作者：NGU-SprinG
+- 修改版作者：nguspring
 - 基于原版 v3.3.3 修改
 - 版本：v3.4.1
