--- a/升级指南.md
+++ b/升级指南.md
@@ -2,7 +2,7 @@
 
 > **修改版定位**：本修改版专注于**定时发送自拍**功能，让Bot更像真人；同时主要对**魔搭模型**进行优化，内置7个精选魔搭模型预设配置，提供开箱即用的体验。
 
-本指南适用于已安装原版插件的用户，通过替换文件的方式升级到修改版 v3.4.1。
+本指南适用于已安装原版插件的用户，通过替换文件的方式升级到修改版 v3.4.2。
 
 ---
 
@@ -130,10 +130,14 @@ use_replyer_for_ask = true
 sleep_mode_enabled = true
 sleep_start_time = "23:00"
 sleep_end_time = "07:00"
-schedule_mode = "interval"  # 新增：interval=倒计时模式，times=指定时间点模式
-schedule_times = ["08:00", "20:00"]  # 新增：指定时间点列表
-list_mode = "whitelist"  # 新增：whitelist=白名单，blacklist=黑名单
-chat_id_list = []  # 新增：聊天ID列表
+schedule_mode = "interval"  # interval=倒计时模式，times=指定时间点模式
+schedule_times = ["08:00", "20:00"]  # 指定时间点列表
+list_mode = "whitelist"  # whitelist=白名单，blacklist=黑名单
+chat_id_list = []  # 聊天ID列表
+enable_llm_scene = false  # v3.4.2新增：是否启用LLM智能场景判断
+scene_llm_model = ""  # v3.4.2新增：智能场景判断使用的模型ID
+time_scenes = ["08:00|morning coffee, cafe", "22:00|pajamas, bedroom"]  # v3.4.2新增：Times模式自定义场景
+ask_model_id = ""  # v3.4.2新增：询问语生成的模型ID
 ```
 
 ### 智能参考搜索配置
@@ -203,6 +207,15 @@ mv custom_pic_plugin.backup custom_pic_plugin
 ```
 
 ---
+
+## 🆕 v3.4.2 新功能概览
+
+| 功能 | 说明 |
+|------|------|
+| 🧠 LLM 智能场景判断 | Interval 模式下根据时间自动生成合适的自拍场景 |
+| 📅 Times 模式自定义场景 | 为每个时间点配置专属场景描述 |
+| 🎤 询问语模型选择 | 可指定生成询问语的 LLM 模型，Prompt 更贴合图片内容 |
+| ✋ 自拍双手问题修复 | 优化通用提示词，明确单手持机，减少双手崩坏 |
 
 ## 🆕 v3.4.0 新功能概览
 
