--- a/升级指南.md
+++ b/升级指南.md
@@ -2,7 +2,7 @@
 
 > **修改版定位**：本修改版专注于**定时发送自拍**功能，让Bot更像真人；同时主要对**魔搭模型**进行优化，内置7个精选魔搭模型预设配置，提供开箱即用的体验。
 
-本指南适用于已安装原版插件的用户，通过替换文件的方式升级到修改版 v3.4.2。
+本指南适用于已安装原版插件的用户，通过替换文件的方式升级到修改版 v3.5.1。
 
 ---
 
@@ -205,6 +205,28 @@ rm -rf custom_pic_plugin
 mv custom_pic_plugin.backup custom_pic_plugin
 # 重启MaiBot
 ```
+
+---
+
+## 🆕 v3.5.1 修复版
+
+| 修复项 | 说明 |
+|------|------|
+| 🐛 死锁问题修复 | 修复日常叙事系统启动时的死锁（threading.Lock → RLock） |
+| 🔧 配文生成器优化 | `caption_model_id` 留空时默认使用 MaiBot 的 replyer 模型 |
+| 🔧 智能参考搜索优化 | `vision_api_key` 留空时默认使用 MaiBot 的 vlm 模型 |
+| 📝 配置说明更新 | 更新配置项描述，明确说明默认使用的模型 |
+
+---
+
+## 🆕 v3.5.0 日常叙事系统
+
+| 功能 | 说明 |
+|------|------|
+| 🎭 日常叙事系统 | 每天的自拍形成连贯的故事线，配文有承上启下感 |
+| 📝 配文多样化 | 支持叙事式、询问式、分享式、独白式、无配文5种类型 |
+| 🔄 Hybrid 混合模式 | times为主线 + interval为补充，拟人效果最佳 |
+| 📅 剧本系统 | 内置工作日(default)和周末(weekend)两套剧本 |
 
 ---
 
