--- a/升级指南.md
+++ b/升级指南.md
@@ -2,7 +2,7 @@
 
 > **修改版定位**：本修改版专注于**定时发送自拍**功能，让Bot更像真人；同时主要对**魔搭模型**进行优化，内置7个精选魔搭模型预设配置，提供开箱即用的体验。
 
-本指南适用于已安装原版插件的用户，通过替换文件的方式升级到修改版 v3.5.0-beta.4。
+本指南适用于已安装原版插件的用户，通过替换文件的方式升级到修改版 v3.5.0-beta.5。
 
 ---
 
@@ -120,7 +120,7 @@ git clone https://github.com/nguspring/custom_pic_plugin
 
 升级后，配置文件会自动新增以下配置节：
 
-### 定时自拍配置（v3.5.0-beta.4 Smart模式）
+### 定时自拍配置（v3.5.0-beta.5 Smart模式）
 ```toml
 [auto_selfie]
 enabled = false
@@ -133,11 +133,7 @@ sleep_end_time = "07:00"
 list_mode = "whitelist"  # whitelist=白名单，blacklist=黑名单
 chat_id_list = []  # 聊天ID列表
 
-# v3.5.0-beta.4 角色设定
-character_name = "麦麦"  # 角色名称
-character_persona = ""  # 角色人设，LLM会根据人设生成符合角色的场景
-
-# v3.5.0-beta.4 Smart模式专用配置
+# Smart模式专用配置
 schedule_generator_model = ""  # 日程生成模型（留空使用MaiBot默认replyer模型）
 schedule_min_entries = 4  # 每日最少日程数
 schedule_max_entries = 8  # 每日最多日程数
@@ -211,14 +207,22 @@ mv custom_pic_plugin.backup custom_pic_plugin
 
 ---
 
+## 🆕 v3.5.0-beta.5 移除角色配置功能
+
+| 功能 | 说明 |
+|------|------|
+| 🗑️ 移除 character_name | 日程生成不再使用角色名称 |
+| 🗑️ 移除 character_persona | 日程生成不再使用角色人设 |
+| ✅ 完全使用 selfie.prompt_prefix | 人物外观特征（发色、瞳色等）完全由此配置控制，确保人设稳定性 |
+
+---
+
 ## 🆕 v3.5.0-beta.4 配置结构简化
 
 | 功能 | 说明 |
 |------|------|
 | 📝 重写 auto_selfie 配置 | 将配置项重新组织为8个清晰的逻辑分组，添加详细中文注释 |
 | 🆕 新增 schedule_times | 每天发送自拍的时间点列表（24小时制 HH:MM） |
-| 🆕 新增 character_name | 角色名称，用于场景描述生成 |
-| 🆕 新增 character_persona | 角色人设，LLM会根据人设生成符合角色的场景 |
 | 🗑️ 删除 schedule_mode | 不再让用户选择模式，统一使用 Smart 模式 |
 | 🗑️ 删除废弃配置项 | 删除 narrative_script、narrative_context_length、ask_model_id 等冗余配置 |
 
