feat: 添加人设注入功能 v3.5.0-beta.6 - 配文生成支持自定义人设和回复风格 - 日程生成支持自定义人设和生活方式 - 用户可在配置中自行调整人设描述

--- a/新功能添加说明.md
+++ b/新功能添加说明.md
@@ -4,9 +4,9 @@
 
 ## 版本对比
 
-| 项目 | 原版插件 (v3.3.3) | 修改版插件 (v3.5.0-beta.5) |
+| 项目 | 原版插件 (v3.3.3) | 修改版插件 (v3.5.0-beta.6) |
 |------|-------------------|---------------------|
-| 版本号 | 3.3.3 | 3.5.0-beta.5 |
+| 版本号 | 3.3.3 | 3.5.0-beta.6 |
 | 文件数量 | 18个文件 | 34个文件 |
 | 新增文件 | 0个 | 16个 |
 
@@ -751,6 +751,19 @@ custom_pic_plugin-main/
 
 ## 更新日志
 
+### v3.5.0-beta.6 (修改版) - 人设注入功能
+- 🎭 **配文人设注入**：配文生成时可以注入自定义人设和表达风格，让配文更符合角色设定
+- 🎭 **日程人设注入**：日程生成时可以注入角色身份和生活习惯，让日程更符合人设
+- 🆕 **新增 6 个配置项**：
+  - `caption_persona_enabled`：是否启用配文人设注入
+  - `caption_persona_text`：配文人设描述
+  - `caption_reply_style`：配文表达风格
+  - `schedule_persona_enabled`：是否启用日程人设注入
+  - `schedule_persona_text`：日程人设描述（身份背景）
+  - `schedule_lifestyle`：生活习惯描述
+- 🔧 **caption_generator.py 增强**：新增 `_get_persona_block()` 方法，在配文 Prompt 前注入人设块
+- 🔧 **schedule_generator.py 增强**：新增 `_get_schedule_persona_block()` 方法，在日程 Prompt 中注入人设
+
 ### v3.5.0-beta.5 (修改版) - 移除角色配置功能
 - 🗑️ **移除 character_name**：日程生成不再使用角色名称
 - 🗑️ **移除 character_persona**：日程生成不再使用角色人设
@@ -822,4 +835,4 @@ custom_pic_plugin-main/
 - 原版作者：Ptrel，Rabbit-Jia-Er，saberlights Kiuon
 - 修改版作者：nguspring
 - 基于原版 v3.3.3 修改
-- 版本：v3.5.0-beta.5
+- 版本：v3.5.0-beta.6
