版本更新至3.5.1：修复回退日程生成的时间-场景匹配问题

--- a/新功能添加说明.md
+++ b/新功能添加说明.md
@@ -4,9 +4,9 @@
 
 ## 版本对比
 
-| 项目 | 原版插件 (v3.3.3) | 修改版插件 (v3.5.0-beta.13) |
+| 项目 | 原版插件 (v3.3.3) | 修改版插件 (v3.5.1) |
 |------|-------------------|---------------------|
-| 版本号 | 3.3.3 | 3.5.0-beta.13 |
+| 版本号 | 3.3.3 | 3.5.1 |
 | 文件数量 | 18个文件 | 33个文件 |
 | 新增文件 | 0个 | 15个 |
 
